--- a/Trezor.html
+++ b/Trezor.html
@@ -254,7 +254,7 @@
 
 
 
-<p><button class="help-button" onclick="selectBoardMenu()">🏠</button>&nbsp;<button id="helpButton" class="help-button" onclick="showHelp()">💡</button>&nbsp;<button class="help-button" >Trezor</button>&nbsp;<button class="help-button" onclick="displayGameStatsInModal()">🏆</button>&nbsp;<button id="helpButton" class="help-button" onclick="manualEndRound()">🚫</button></p>
+<p><button class="help-button" onclick="selectBoardMenu()">🏠</button>&nbsp;<button id="helpButton" class="help-button" onclick="showHelp()">💡</button>&nbsp;<button class="help-button" >TREZOR</button>&nbsp;<button class="help-button" onclick="displayGameStatsInModal()">🏆</button>&nbsp;<button id="helpButton" class="help-button" onclick="manualEndRound()">🚫</button></p>
 <div id="helpModal" class="modal">
   <div class="modal-content">
     <span class="close" onclick="closeHelp()">&times;</span>
