--- a/Trezor.html
+++ b/Trezor.html
@@ -1024,7 +1024,7 @@ function getLowestScoreBoard(stats) {
       worstBoardIds.push(boardId);
     }
   });
-
+  worstBoardIds.sort(); // Seřadíme desky abecedně
   return { worstBoardIds, lowestScore };
 }
 
@@ -1042,7 +1042,7 @@ Object.keys(stats.boards).forEach(boardId => {
       bestBoardIds.push(boardId);
     }
   });
-
+  bestBoardIds.sort(); // Seřadíme desky abecedně
   return { bestBoardIds, highestScore };
 }
 
