--- a/Collapsi_AI_en.html
+++ b/Collapsi_AI_en.html
@@ -112,7 +112,7 @@ else if (mode === 'pvp') {
     }
 
     function updateTurnText() {
-      turnInd.textContent = currentPlayer === 'R' ? 'Červený' : 'Modrý';
+      turnInd.textContent = currentPlayer === 'R' ? 'Red' : 'Blue';
     }
 
     function getValidMoves(player) {
